{
  "version": 4,
  "terraform_version": "1.1.8",
  "serial": 36,
  "lineage": "ad8395ca-4fd4-65d9-2f76-8e94bd7fbbdc",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:625413607130:internet-gateway/igw-0f431e16b82987567",
            "id": "igw-0f431e16b82987567",
            "owner_id": "625413607130",
            "tags": {
              "Name": "trainingeks-demo-vpc"
            },
            "tags_all": {
              "Name": "trainingeks-demo-vpc"
            },
            "vpc_id": "vpc-0bd7cc9cc331de684"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0f431e16b82987567",
            "id": "r-rtb-04dd6308e9330a1071080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04dd6308e9330a107",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:625413607130:route-table/rtb-0cf94d28e0dc1a62d",
            "id": "rtb-0cf94d28e0dc1a62d",
            "owner_id": "625413607130",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "trainingeks-demo-vpc"
            },
            "tags_all": {
              "Name": "trainingeks-demo-vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bd7cc9cc331de684"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:625413607130:route-table/rtb-0f952b29751aaef7f",
            "id": "rtb-0f952b29751aaef7f",
            "owner_id": "625413607130",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "trainingeks-demo-vpc"
            },
            "tags_all": {
              "Name": "trainingeks-demo-vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bd7cc9cc331de684"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:625413607130:route-table/rtb-0fd0547167645314c",
            "id": "rtb-0fd0547167645314c",
            "owner_id": "625413607130",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "trainingeks-demo-vpc"
            },
            "tags_all": {
              "Name": "trainingeks-demo-vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bd7cc9cc331de684"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:625413607130:route-table/rtb-04dd6308e9330a107",
            "id": "rtb-04dd6308e9330a107",
            "owner_id": "625413607130",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f431e16b82987567",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "trainingeks-demo-vpc"
            },
            "tags_all": {
              "Name": "trainingeks-demo-vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bd7cc9cc331de684"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b7775772b4c22f5f",
            "route_table_id": "rtb-0cf94d28e0dc1a62d",
            "subnet_id": "subnet-0d10ca1a46bb3e02c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01cf4e9c43ad32fbf",
            "route_table_id": "rtb-0f952b29751aaef7f",
            "subnet_id": "subnet-0c9ccde9deca6cf58"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f1d6f25dc99db99d",
            "route_table_id": "rtb-0fd0547167645314c",
            "subnet_id": "subnet-046d5f13f62ced06a"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d5da25aa9e6b92a3",
            "route_table_id": "rtb-04dd6308e9330a107",
            "subnet_id": "subnet-08104d2ec0b1b0e47"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0136f5aa9e9a944e5",
            "route_table_id": "rtb-04dd6308e9330a107",
            "subnet_id": "subnet-02dac34b0369b9be5"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c9514aaa376382db",
            "route_table_id": "rtb-04dd6308e9330a107",
            "subnet_id": "subnet-0f2fb5bfca6af34a0"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:625413607130:subnet/subnet-0d10ca1a46bb3e02c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d10ca1a46bb3e02c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "625413607130",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "trainingeks-demo-vpc"
            },
            "tags_all": {
              "Name": "trainingeks-demo-vpc"
            },
            "vpc_id": "vpc-0bd7cc9cc331de684"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:625413607130:subnet/subnet-0c9ccde9deca6cf58",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c9ccde9deca6cf58",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "625413607130",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "trainingeks-demo-vpc"
            },
            "tags_all": {
              "Name": "trainingeks-demo-vpc"
            },
            "vpc_id": "vpc-0bd7cc9cc331de684"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:625413607130:subnet/subnet-046d5f13f62ced06a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-046d5f13f62ced06a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "625413607130",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "trainingeks-demo-vpc"
            },
            "tags_all": {
              "Name": "trainingeks-demo-vpc"
            },
            "vpc_id": "vpc-0bd7cc9cc331de684"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:625413607130:subnet/subnet-08104d2ec0b1b0e47",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08104d2ec0b1b0e47",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "625413607130",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "trainingeks-demo-vpc"
            },
            "tags_all": {
              "Name": "trainingeks-demo-vpc"
            },
            "vpc_id": "vpc-0bd7cc9cc331de684"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:625413607130:subnet/subnet-02dac34b0369b9be5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02dac34b0369b9be5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "625413607130",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "trainingeks-demo-vpc"
            },
            "tags_all": {
              "Name": "trainingeks-demo-vpc"
            },
            "vpc_id": "vpc-0bd7cc9cc331de684"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:625413607130:subnet/subnet-0f2fb5bfca6af34a0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f2fb5bfca6af34a0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "625413607130",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "trainingeks-demo-vpc"
            },
            "tags_all": {
              "Name": "trainingeks-demo-vpc"
            },
            "vpc_id": "vpc-0bd7cc9cc331de684"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:625413607130:vpc/vpc-0bd7cc9cc331de684",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02d8a9ec6b4a8ddac",
            "default_route_table_id": "rtb-02ce4fe71eab3b78d",
            "default_security_group_id": "sg-0c4e05270ae895b20",
            "dhcp_options_id": "dopt-0cf580b217e604578",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0bd7cc9cc331de684",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02ce4fe71eab3b78d",
            "owner_id": "625413607130",
            "tags": {
              "Name": "trainingeks-demo-vpc"
            },
            "tags_all": {
              "Name": "trainingeks-demo-vpc"
            }
          }
        }
      ]
    }
  ]
}